crates/toml_edit/tests/snapshots/invalid/array/no-close-04.stderr
TOML parse error at line 1, column 26
  |
1 | no-close-04 = [{ key = 42
  |                          ^
newlines are unsupported in inline tables, expected nothing
